# sidekick

./: .algokit.toml  README.md  context7-mockup.html  sidekick.code-workspace
.algokit/: .copier-answers.yml
projects/sidekick-contracts/: .algokit.toml  README.md  pyproject.toml
projects/sidekick-contracts/.algokit/: .copier-answers.yml
projects/sidekick-contracts/smart_contracts/sidekick/: Context7Marketplace.approval.puya.map  Context7Marketplace.approval.teal  Context7Marketplace.arc32.json  Context7Marketplace.arc56.json  context_marketplace.py  contract.py  deploy_config.py
projects/sidekick-frontend/: .algokit.toml  README.md  index.html  package-lock.json  package.json
projects/sidekick-frontend/.algokit/: .copier-answers.yml
projects/sidekick-frontend/src/: App.tsx  Home.tsx
projects/sidekick-frontend/src/components/: AppCalls.tsx  ConnectWallet.tsx  ContextCard.tsx  UploadForm.tsx
projects/sidekick-frontend/src/contracts/: Context7Marketplace.ts
projects/sidekick-frontend/src/styles/: pixel-arcade.css
